# cbe_resource_hub

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  build.sh  compose.prod.yaml  compose.yaml  conftest.py  dev-dbs-compose.yaml  docker-health-check.py  manage.py  pyproject.toml  release.sh  req_test.py  requirements.txt
.github/workflows/: _test.yml  ci-cd.yml  release.yml
accounts/: adapters.py  admin.py  admin_urls.py  admin_views.py  apps.py  forms.py  models.py  signals.py  tests.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_alter_customuser_email_alter_customuser_username.py  0003_alter_customuser_managers_alter_customuser_username.py  0004_alter_customuser_phone_number.py  0005_customuser_favorites.py  0006_customuser_must_change_password.py  0007_customuser_disable_email_notification.py  0008_alter_customuser_disable_email_notification.py
accounts/tests/: __init__.py  base.py  test_adapters.py  test_admin_views.py  test_django_admin.py  test_forms.py  test_models.py  test_signals.py  test_views.py
cbe_res_hub/: asgi.py  celery.py  middleware.py  settings.py  settings_legacy.py  urls.py  wsgi.py
cbe_res_hub/settings/: __init__.py  base.py  development.py  production.py  testing.py
cms/: admin.py  admin_urls.py  admin_views.py  apps.py  context_processors.py  forms.py  models.py  signals.py  tests.py  urls.py  utils.py  views.py
cms/migrations/: 0001_initial.py  0002_alter_page_content.py  0003_page_featured_image_page_meta_description_and_more.py  0004_alter_sitesetting_key_alter_sitesetting_value.py  0005_page_focus_keyword.py  0006_alter_menu_name_alter_sitesetting_key_and_more.py  0007_alter_page_content.py
cms/tests/: __init__.py  base.py  test_admin_views.py  test_context_processors.py  test_forms.py  test_models.py  test_utils.py  test_views.py
core/: admin.py  admin_actions.py  admin_urls.py  admin_views.py  fields.py  models.py  signals.py  utils.py
core/migrations/: 0001_initial.py  0002_alter_term_options_alter_year_year.py  0003_alter_academicsession_options.py  0004_academicsession_slug.py  0005_alter_academicsession_slug.py
core/tests/: __init__.py  base.py  test_admin_views.py  test_models.py  test_signals.py  test_utils.py
docs/: CI-CD.md  HOMEPAGE.md  MENUS.md  NOTIFICATIONS.md  QUERY_OPTIMIZATION.md  ROADMAP.md  security_audit_report.md
files/: admin.py  admin_urls.py  admin_views.py  models.py  signals.py
files/migrations/: 0001_initial.py  0002_alter_file_file.py  0003_alter_file_file.py  0004_alter_file_file.py
files/tests/: README.md  __init__.py  fixtures.py  test_admin.py  test_integration.py  test_management_commands.py  test_models.py  test_performance.py  test_validators.py
helpers/cloudflare/: settings.py  storages.py
helpers/storages/: mixins.py
notifications/: admin.py  admin_views.py  models.py  notifier.py  signals.py  tasks.py  tests.py  urls.py
notifications/migrations/: 0001_initial.py  0002_alter_notification_notification_type.py  0003_alter_notification_notification_type.py
notifications/tests/: __init__.py  base.py  test_admin_views.py  test_models.py  test_notifier.py  test_tasks.py
resources/: admin.py  admin_dependency_views.py  admin_urls.py  admin_views.py  apps.py  cache.py  forms.py  models.py  signals.py  tests.py  urls.py  utils.py  validators.py  views.py
resources/migrations/: 0001_initial.py  0002_resourceitem_resource_type_and_more.py  0003_alter_resourceitem_description.py  0004_resourceitem_featured_image_and_more.py  0005_alter_resourceitem_resource_type.py  0006_alter_resourceitem_resource_type.py  0007_resourceitem_resources_r_updated_6b95ec_idx_and_more.py  0008_alter_educationlevel_options_and_more.py  0009_alter_grade_slug_alter_grade_unique_together.py  0010_alter_resourceitem_file.py  0011_alter_resourceitem_file.py  0012_educationlevel_focus_keyword_grade_focus_keyword_and_more.py  0013_resourceitem_academic_session.py  0014_alter_resourceitem_file.py  0015_alter_resourceitem_description.py  0016_alter_resourceitem_file.py  0017_alter_resourceitem_file.py  0018_alter_resourceitem_file.py  0019_alter_resourceitem_file.py  0020_alter_resourceitem_description.py  0021_resourcecomment.py
resources/tests/: __init__.py  base.py  test_admin_views.py  test_cache.py  test_forms.py  test_models.py  test_signals.py  test_utils.py  test_views.py
seo/: admin.py  admin_views.py  forms.py  middleware.py  mixins.py  models.py  urls.py  utils.py
seo/migrations/: 0001_initial.py  0002_slugredirect_updated_at_and_more.py  0003_alter_slugredirect_created_at.py
seo/tests/: __init__.py  base.py  test_admin_views.py  test_forms.py  test_middleware.py  test_mixins.py  test_models.py  test_utils.py
test/: Dockerfile  compose.yaml  test.sh
tests/: __init__.py  test_integration.py  test_settings.py
validators/: __init__.py  core.py  presets.py  signatures.py
validators/tests/: __init__.py  test_validators.py
website/: admin.py  admin_dependency_views.py  admin_views.py  apps.py  cache.py  context_processors.py  health_checks.py  models.py  package.json  signals.py  sitemaps.py  tasks.py  views.py
website/forms/: __init__.py  admin_comment.py  comment.py  contact.py  email.py
website/migrations/: 0001_initial.py  0002_alter_contactmessage_phone.py  0003_alter_contactmessage_email.py  0004_partner.py  0005_alter_partner_featured_image.py  0006_partner_meta_description_partner_meta_keywords_and_more.py  0007_partner_banner_fields.py  0008_partner_focus_keyword.py  0009_emailsubscriber.py  0010_alter_partner_options.py  0011_alter_partner_logo.py  0011_blogindexpage_customdocument_customimage_blogpage_and_more.py  0013_faq_testimonial_alter_customimage_file_and_more.py  0014_alter_partner_description.py  0015_alter_blogpage_body_alter_blogpage_date_and_more.py  0016_alter_customdocument_file_alter_customimage_file_and_more.py  0017_alter_customimage_file_alter_customrendition_file.py  0018_blogpage_views_blogauthor_blogpage_author.py  0019_blogauthor_email_blogauthor_website.py  0020_blogauthor_telegram_blogauthor_tiktok_and_more.py  (+5 more)
(+132 files in other folders)
