[project]
name = "cbe-resource-hub"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0.3",
    "django-allauth>=65.15.1",
    "django-allauth-ui>=1.8.1",
    "django-axes>=8.3.1",
    "django-celery-beat>=2.9.0",
    "django-celery-results>=2.6.0",
    "django-cors-headers>=4.9.0",
    "django-dbbackup>=5.2.0",
    "django-debug-toolbar>=6.3.0",
    "django-mptt>=0.18.0",
    "django-ninja>=1.6.2",
    "django-phonenumber-field>=8.4.0",
    "django-redis>=6.0.0",
    "django-silk[formatting]>=5.5.0",
    "django-smart-ratelimit>=2.2.0",
    "django-storages[s3]>=1.14.6",
    "django-taggit>=6.1.0",
    "django-tinymce>=5.0.0",
    "gunicorn>=25.3.0",
    "hiredis>=3.3.1",
    "phonenumbers>=9.0.27",
    "pillow>=12.2.0",
    "pip>=26.0.1",
    "pip-audit>=2.10.0",
    "psycopg2-binary>=2.9.11",
    "pytest>=9.0.2",
    "pytest-django>=4.12.0",
    "python-dotenv>=1.2.2",
    "redis>=7.4.0",
]
