[project]
name = "cbe-resource-hub"
version = "1.0.2"
description = "Open-source CBE/CBC educational resource hub for Kenyan learners"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    # ── Django core ───────────────────────────────────────────────────────────
    "django==6.0.4",
    # ── Database ──────────────────────────────────────────────────────────────
    "psycopg[binary]==3.3.3",
    # ── Cache / Redis ─────────────────────────────────────────────────────────
    "django-redis==6.0.0",
    "redis==7.4.0",
    "hiredis==3.3.1",
    # ── Auth / Accounts ───────────────────────────────────────────────────────
    "django-allauth==65.16.1",
    "django-allauth-ui==1.8.1",
    "pyjwt==2.12.1",
    "django-axes==8.3.1",
    "django-phonenumber-field==8.4.0",
    "phonenumbers==9.0.29",
    # ── Task queue ────────────────────────────────────────────────────────────
    "celery==5.6.3",
    "django-celery-beat==2.9.0",
    "django-celery-results==2.6.0",
    # ── Storage ───────────────────────────────────────────────────────────────
    "django-storages[s3]==1.14.6",
    # ── CMS & Forms ───────────────────────────────────────────────────────────
    "django-tinymce==5.0.0",
    "django-taggit==6.1.0",
    "django-widget-tweaks==1.5.1",
    # ── Rate limiting & security ──────────────────────────────────────────────
    "django-smart-ratelimit==2.2.1",
    "django-cors-headers==4.9.0",
    # ── Database backups ──────────────────────────────────────────────────────
    "django-dbbackup==5.3.0",
    # ── Monitoring ────────────────────────────────────────────────────────────
    "sentry-sdk==2.58.0",
    # ── Logging ───────────────────────────────────────────────────────────────
    "python-json-logger==4.1.0",
    # ── Images ───────────────────────────────────────────────────────────────
    "pillow==12.2.0",
    # ── Environment ───────────────────────────────────────────────────────────
    "python-dotenv==1.2.2",
    # ── Server ────────────────────────────────────────────────────────────────
    "gunicorn==25.3.0",
    # ── Pinned transitive deps ────────────────────────────────────────────────
    "amqp==5.3.1",
    "asgiref==3.11.1",
    "attrs==26.1.0",
    "autobahn==25.12.2",
    "automat==25.4.16",
    "billiard==4.2.4",
    "boolean-py==5.0",
    "boto3==1.42.83",
    "botocore==1.42.83",
    "cachecontrol==0.14.4",
    "cbor2==5.9.0",
    "certifi==2026.2.25",
    "cffi==2.0.0",
    "charset-normalizer==3.4.7",
    "click==8.3.2",
    "click-didyoumean==0.3.1",
    "click-plugins==1.1.1.2",
    "click-repl==0.3.0",
    "constantly==23.10.4",
    "cron-descriptor==1.4.5",
    "cryptography==46.0.7",
    "defusedxml==0.7.1",
    "django-timezone-field==7.2.1",
    "filelock==3.25.2",
    "hyperlink==21.0.0",
    "idna==3.11",
    "incremental==24.11.0",
    "jmespath==1.1.0",
    "kombu==5.6.2",
    "markdown-it-py==4.0.0",
    "mdurl==0.1.2",
    "msgpack==1.1.2",
    "packageurl-python==0.17.6",
    "packaging==26.0",
    "platformdirs==4.9.4",
    "prompt-toolkit==3.0.52",
    "psycopg-binary==3.3.3",
    "pyasn1==0.6.3",
    "pyasn1-modules==0.4.2",
    "pycparser==3.0",
    "pygments==2.20.0",
    "pyopenssl==26.0.0",
    "pyparsing==3.3.2",
    "python-crontab==3.3.0",
    "python-dateutil==2.9.0.post0",
    "pyyaml==6.0.3",
    "requests==2.33.1",
    "rich==14.3.3",
    "s3transfer==0.16.0",
    "service-identity==24.2.0",
    "six==1.17.0",
    "slippers==0.6.3",
    "sortedcontainers==2.4.0",
    "sqlparse==0.5.5",
    "tomli==2.4.1",
    "tomli-w==1.2.0",
    "twisted==25.5.0",
    "txaio==25.12.2",
    "typeguard==2.13.3",
    "typing-extensions==4.15.0",
    "tzdata==2026.1",
    "tzlocal==5.3.1",
    "ujson==5.12.0",
    "urllib3==2.6.3",
    "vine==5.1.0",
    "wcwidth==0.6.0",
    "zope-interface==8.2",
    "wagtail>=7.3.1",
]

[dependency-groups]
dev = [
    # ── Testing ───────────────────────────────────────────────────────────────
    "pytest==9.0.3",
    "pytest-django==4.12.0",
    # ── Security audit ────────────────────────────────────────────────────────
    "pip-audit==2.10.0",
    "cyclonedx-python-lib==11.7.0",
    "license-expression==30.4.4",
    "py-serializable==2.1.0",
    "pip-api==0.0.34",
    "pip-requirements-parser==32.0.1",
    "pluggy==1.6.0",
    "iniconfig==2.3.0",
    # ── Dev tooling ───────────────────────────────────────────────────────────
    "django-debug-toolbar==6.3.0",
    "django-silk[formatting]==5.5.0",
    "autopep8==2.3.2",
    "pycodestyle==2.14.0",
    "gprof2dot==2025.4.14",
    # ── Audit transitive deps ─────────────────────────────────────────────────
    "py-ubjson==0.16.1",
    "pytest-xdist>=3.8.0",
    "ruff>=0.15.12",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "cbe_res_hub.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
addopts = "-p no:cacheprovider --verbose --tb=short --color=yes --code-highlight=yes"
# addopts = "--reuse-db --nomigrations -p no:warnings"
